game-catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-api
  namespace: default
  labels:
    app: game-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: game-api
  template:
    metadata:
      labels:
        app: game-api
    spec:
      containers:
        - name: game-api
          image: guustavomccb/game-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: data-volume
              mountPath: /data
          livenessProbe:
            httpGet:
              path: /api/game
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/game
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: game-api-pvc
