game-catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-api-service
  namespace: default
spec:
  selector:
    app: game-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
